--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "beautifulsoup4>=4.14.2",
     "chromadb>=1.3.4",
     "numpy>=2.2.6",
     "requests>=2.32.5",
