--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.10"
 dependencies = [
     "beautifulsoup4>=4.14.2",
     "chromadb>=1.3.4",
+    "fitz>=0.0.1.dev2",
     "numpy>=2.2.6",
+    "pymupdf>=1.25.1",
     "requests>=2.32.5",
     "sentence-transformers>=5.1.2",
     "tqdm>=4.67.1",
